services-and-networking/ingress/green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: green
  template:
    metadata:
      labels:
        app: green
    spec:
      containers:
      - name: green
        image: teamcloudyuga/green
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: green
  labels:
    app: green
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: green
